--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ theme: minima
 markdown: kramdown
 paginate: 5
 paginate_path: "/posts/page:num"
+
+collections:
+  projects: 
+    output: true
+    permalink: /projects/:path:output_ext
 plugins:
   - jekyll-feed
   - jekyll-paginate
