--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: a6hay
+author: Abhay Pratap Singh
 email: rathaursinghpa@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi, There
