--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://eman-pars.github.io" # the base hostname & protocol for your site,
 github_username:  eman-pars
 
 # Build settings
-theme: minima
+theme: jekyll-theme-leap-day
 markdown: kramdown
 paginate: 5
 paginate_path: "/posts/page:num"
